snapshots/parsers/syntax/library/functions/conversion/date/date_basic.snap
---
source: src/syntax/library/functions/datetime/date.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: today
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: DateKeyword
              text: Date
        - kind: Newline
          text: "\n"
