snapshots/parsers/syntax/library/functions/conversion/date/date_database_usage.snap
---
source: src/syntax/library/functions/datetime/date.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: Identifier
      text: rs
    - kind: Unknown
      text: (
    - kind: Unknown
      text: "\"OrderDate\""
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: RightParenthesis
              text: )
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: DateKeyword
              text: Date
        - kind: Newline
          text: "\n"
    - kind: CallStatement
      children:
        - kind: Identifier
          text: rs
        - kind: PeriodOperator
          text: "."
        - kind: Identifier
          text: Update
        - kind: Newline
          text: "\n"
